# snowboot

./: .gitignore  CMakeLists.txt  README.md  get-deps  image.sh  snowboot.conf
src/: CMakeLists.txt  acpi.c  disk_services.c  filesystem.c  log.c  memory_services.c  pe.c  print.c  snowboot.c  video_services.c  virtual_memory.c
src/inc/: acpi.h  disk_services.h  error.h  globals.h  log.h  memory_services.h  print.h  types.h  video_services.h
src/inc/boot_protocol/: snowboot.h
src/inc/fs/: filesystem.h  pe.h
